--- a/index.html
+++ b/index.html
@@ -1,39 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>MacOutlet</title>
-</head>
-<body>
-    <header>
-        <div class="cart">
-            <div class="cart_info">some info</div>
-            <button id="showCartItems">Show items</button>
-            <div class="cart_items">
-                <div class="cart_item">
-                    <img src="#" alt="">
-                    x
-                    <span>24</span>
-                    =
-                    <span>23443$</span>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-       <aside class="filter-container">
-       </aside>
-        <section class="items">
-        </section>
-    </main>
+  </head>
+  <body>
     <script src="js/items.js"></script>
     <script src="js/index.js"></script>
-</body>
+  </body>
 </html>
-
-
-
