--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>MacOutlet</title>
   </head>
   <body>
+    <header>
+      <a href="index.html"><img src="img/icons/logo.png" alt="logo" id="logo" /></a>
+    <div>
+        <img src="img/icons/cart.svg" alt="cart" style="width: 3%;">
+    </div>
+    </header>
+    <main></main>
     <script src="js/items.js"></script>
     <script src="js/index.js"></script>
   </body>
