--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <h1 id="banner_product_name">iPad Air</h1>
         <button class="add_to_cart_btn">Add to cart</button>
       </div>
+      <ul id="devices_list"></ul>
     </main>
     <script src="js/items.js"></script>
     <script src="js/index.js"></script>
